# GeneralCPP

./: CMakeLists.txt  numbers_from.txt
Lab7UnorderedSet/: Lab7.cpp
PalindromesCheck/: palindromesCheck.cpp
PigGamePart1/: CMakeLists.txt  Die.cpp  Die.h  playervscomputer.cpp  pvp.cpp
StackBaseConversion/: Stack.cpp
